#1588 Use JDK20 and Gradle 8.2.  Updates SDRPlay API for compatibility with JDK20 Project Panama Foreign Memory/Function changes.